[package]
name = "prometheus-wire"
version = "0.1.0"
authors = ["Leomar Silva <leomarssilva@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leomarssilva/prometheus-wire"
repository = "https://github.com/leomarssilva/prometheus-wire"
description = "A simple library to query and parse metrics from Prometheus exporters"
keywords = ["prometheus", "metrics", "parsing"]
categories = ["development-tools", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1"